// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomScreen render RoomScreen for Authorization user 1`] = `
<MainLayout
  classNameWrap="page__main--property"
>
  <section
    className="property"
  >
    <div
      className="property__gallery-container container"
    >
      <div
        className="property__gallery"
      >
        <div
          className="property__image-wrapper"
        >
          <img
            alt="Photo studio"
            className="property__image"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg"
          />
        </div>
        <div
          className="property__image-wrapper"
        >
          <img
            alt="Photo studio"
            className="property__image"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="property__container container"
    >
      <div
        className="property__wrapper"
      >
        <div
          className="property__name-wrapper"
        >
          <h1
            className="property__name"
          >
            The house among olive 
          </h1>
          <button
            className="property__bookmark-button button
                      "
            onClick={[Function]}
            type="button"
          >
            <svg
              className="place-card__bookmark-icon property__bookmark-icon"
              height="33"
              width="31"
            >
              <use
                xlinkHref="#icon-bookmark"
              />
            </svg>
            <span
              className="visually-hidden"
            >
              To bookmarks
            </span>
          </button>
        </div>
        <div
          className="property__rating rating"
        >
          <Rating
            className="property__stars"
            rating={3.8}
          />
          <span
            className="property__rating-value rating__value"
          >
            3.8
          </span>
        </div>
        <ul
          className="property__features"
        >
          <li
            className="property__feature property__feature--entire"
          >
            house
          </li>
          <li
            className="property__feature property__feature--bedrooms"
          >
            3
             Bedrooms
          </li>
          <li
            className="property__feature property__feature--adults"
          >
            Max 
            4
             adults
          </li>
        </ul>
        <div
          className="property__price"
        >
          <b
            className="property__price-value"
          >
            €
            493
          </b>
          <span
            className="property__price-text"
          >
             night
          </span>
        </div>
        <div
          className="property__inside"
        >
          <h2
            className="property__inside-title"
          />
          <ul
            className="property__inside-list"
          >
            <li
              className="property__inside-item"
            >
              Laptop friendly workspace
            </li>
            <li
              className="property__inside-item"
            >
              Washer
            </li>
          </ul>
        </div>
        <div
          className="property__host"
        >
          <h2
            className="property__host-title"
          >
            Meet the host
          </h2>
          <div
            className="property__host-user user"
          >
            <div
              className="property__avatar-wrapper property__avatar-wrapper--pro user__avatar-wrapper"
            >
              <img
                alt="Host avatar"
                className="property__avatar user__avatar"
                height="74"
                src="img/avatar-angelina.jpg"
                width="74"
              />
            </div>
            <span
              className="property__user-name"
            >
              Angelina
            </span>
          </div>
          <div
            className="property__description"
          >
            <p
              className="property__text"
            >
              Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.
            </p>
          </div>
        </div>
        <section
          className="property__reviews reviews"
        >
          <h2
            className="reviews__title"
          >
            Reviews ·
            <span
              className="reviews__amount"
            >
              2
            </span>
          </h2>
          <ReviewsList
            reviews={
              Array [
                Object {
                  "date": "2020-11-05T13:38:44.753Z",
                  "dateFormated": "November 2020",
                  "id": 3,
                  "name": "Isaac",
                  "raiting": 5,
                  "src": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/3.jpg",
                  "text": "The room was spacious and clean. The pool looked nothing like the photos and desparately needs a clean. The sauna and spa were closed for lunar new year holiday.",
                },
                Object {
                  "date": "2020-11-05T13:38:44.753Z",
                  "dateFormated": "November 2020",
                  "id": 2,
                  "name": "Christina",
                  "raiting": 4,
                  "src": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/10.jpg",
                  "text": "I stayed here for one night and it was an unpleasant experience.",
                },
              ]
            }
          />
          <ReviewForm
            commentValue=""
            isDisabled={true}
            onFieldChange={[Function]}
            onSubmit={[Function]}
            ratingValue=""
          />
        </section>
      </div>
    </div>
    <section
      className="property__map map"
    >
      <Map
        activeCardId={2}
        cityCoords={
          Array [
            50.938361,
            6.959974,
          ]
        }
        height="579px"
        offers={
          Array [
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 2,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "main",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
          ]
        }
        width="100%"
        zoom={13}
      />
    </section>
  </section>
  <div
    className="container"
  >
    <section
      className="near-places places"
    >
      <h2
        className="near-places__title"
      >
        Other places in the neighbourhood
      </h2>
      <OfferListNear
        activeItem={null}
        offers={
          Array [
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 2,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
          ]
        }
        onChangeActiveItem={[Function]}
      />
    </section>
  </div>
</MainLayout>
`;

exports[`RoomScreen render RoomScreen for no Authorization user 1`] = `
<MainLayout
  classNameWrap="page__main--property"
>
  <section
    className="property"
  >
    <div
      className="property__gallery-container container"
    >
      <div
        className="property__gallery"
      >
        <div
          className="property__image-wrapper"
        >
          <img
            alt="Photo studio"
            className="property__image"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg"
          />
        </div>
        <div
          className="property__image-wrapper"
        >
          <img
            alt="Photo studio"
            className="property__image"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="property__container container"
    >
      <div
        className="property__wrapper"
      >
        <div
          className="property__name-wrapper"
        >
          <h1
            className="property__name"
          >
            The house among olive 
          </h1>
          <button
            className="property__bookmark-button button
                      "
            onClick={[Function]}
            type="button"
          >
            <svg
              className="place-card__bookmark-icon property__bookmark-icon"
              height="33"
              width="31"
            >
              <use
                xlinkHref="#icon-bookmark"
              />
            </svg>
            <span
              className="visually-hidden"
            >
              To bookmarks
            </span>
          </button>
        </div>
        <div
          className="property__rating rating"
        >
          <Rating
            className="property__stars"
            rating={3.8}
          />
          <span
            className="property__rating-value rating__value"
          >
            3.8
          </span>
        </div>
        <ul
          className="property__features"
        >
          <li
            className="property__feature property__feature--entire"
          >
            house
          </li>
          <li
            className="property__feature property__feature--bedrooms"
          >
            3
             Bedrooms
          </li>
          <li
            className="property__feature property__feature--adults"
          >
            Max 
            4
             adults
          </li>
        </ul>
        <div
          className="property__price"
        >
          <b
            className="property__price-value"
          >
            €
            493
          </b>
          <span
            className="property__price-text"
          >
             night
          </span>
        </div>
        <div
          className="property__inside"
        >
          <h2
            className="property__inside-title"
          />
          <ul
            className="property__inside-list"
          >
            <li
              className="property__inside-item"
            >
              Laptop friendly workspace
            </li>
            <li
              className="property__inside-item"
            >
              Washer
            </li>
          </ul>
        </div>
        <div
          className="property__host"
        >
          <h2
            className="property__host-title"
          >
            Meet the host
          </h2>
          <div
            className="property__host-user user"
          >
            <div
              className="property__avatar-wrapper property__avatar-wrapper--pro user__avatar-wrapper"
            >
              <img
                alt="Host avatar"
                className="property__avatar user__avatar"
                height="74"
                src="img/avatar-angelina.jpg"
                width="74"
              />
            </div>
            <span
              className="property__user-name"
            >
              Angelina
            </span>
          </div>
          <div
            className="property__description"
          >
            <p
              className="property__text"
            >
              Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.
            </p>
          </div>
        </div>
        <section
          className="property__reviews reviews"
        >
          <h2
            className="reviews__title"
          >
            Reviews ·
            <span
              className="reviews__amount"
            >
              2
            </span>
          </h2>
          <ReviewsList
            reviews={
              Array [
                Object {
                  "date": "2020-11-05T13:38:44.753Z",
                  "dateFormated": "November 2020",
                  "id": 3,
                  "name": "Isaac",
                  "raiting": 5,
                  "src": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/3.jpg",
                  "text": "The room was spacious and clean. The pool looked nothing like the photos and desparately needs a clean. The sauna and spa were closed for lunar new year holiday.",
                },
                Object {
                  "date": "2020-11-05T13:38:44.753Z",
                  "dateFormated": "November 2020",
                  "id": 2,
                  "name": "Christina",
                  "raiting": 4,
                  "src": "https://assets.htmlacademy.ru/intensives/javascript-3/avatar/10.jpg",
                  "text": "I stayed here for one night and it was an unpleasant experience.",
                },
              ]
            }
          />
        </section>
      </div>
    </div>
    <section
      className="property__map map"
    >
      <Map
        activeCardId={2}
        cityCoords={
          Array [
            50.938361,
            6.959974,
          ]
        }
        height="579px"
        offers={
          Array [
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 2,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "main",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
          ]
        }
        width="100%"
        zoom={13}
      />
    </section>
  </section>
  <div
    className="container"
  >
    <section
      className="near-places places"
    >
      <h2
        className="near-places__title"
      >
        Other places in the neighbourhood
      </h2>
      <OfferListNear
        activeItem={null}
        offers={
          Array [
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 1,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
            Object {
              "city": Object {
                "location": Array [
                  50.938361,
                  6.959974,
                ],
                "name": "Cologne",
                "zoom": 13,
              },
              "coords": Array [
                50.957361,
                6.9509739999999995,
              ],
              "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
              "details": Object {
                "adults": 4,
                "bedrooms": 3,
                "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
                "insideItems": Array [
                  "Laptop friendly workspace",
                  "Washer",
                ],
              },
              "id": 2,
              "isBookmark": false,
              "isPremium": false,
              "name": "The house among olive ",
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
              "price": 493,
              "raiting": 3.8,
              "src": Array [
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
                "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
              ],
              "type": "house",
              "typeComponent": "near",
              "user": Object {
                "id": 25,
                "isSuper": true,
                "name": "Angelina",
                "src": "img/avatar-angelina.jpg",
              },
            },
          ]
        }
        onChangeActiveItem={[Function]}
      />
    </section>
  </div>
</MainLayout>
`;
